--- a/Portifolio2024/index.html
+++ b/Portifolio2024/index.html
@@ -3,14 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTIFLIO VINICIUS CORREIA</title>
+    <title>PORTFOLIO VINICIUS CORREIA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar__content max-width mb-0">
+            <a href="index.html">
+                <img src="Untitled_logo_1_free-file.jpg" alt="VINICIUS CORREIA">
+            </a>
+            <ul class="navbar__links">
+                <li><a href="#header">Início</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#footer">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header id="header" class="max-width">
+        <div class="header__left">
+            <h1>Olá! Sou Vinicius Correia, Desenvolvedor</h1>
+            <p>
+                Já trabalhei como desenvolvedor FrontEnd, aprimorando minhas habilidades de criação de sites, criando interfaces bonitas e intuitivas e trabalhando com o funcionamento do site. Fiz uma transição de carreira para o desenvolvimento FrontEnd, tenho trabalhado com essas tecnologias nos últimos 9 meses e desejo seguir essa carreira!
+            </p>
+            <a href="#about" class="btn btn-primary">Saiba Mais!</a>
+        </div>
+        <div class="header__right">
+            <div class="header__image">
+                <img src="IMG_20230722_205604_434.webp" alt="Vinicius Correia" class="Vinicius">
+                <img src="abstract.svg" alt="background" class="background">
+            </div>
+        </div>
+    </header>
+
+    <script src="menu.js"></script>
 </body>
 </html>
