--- a/Portifolio2024/index.html
+++ b/Portifolio2024/index.html
@@ -1,53 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>FP Selection</title>
+    <title>Portifolio Vinicius Correia</title>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="logo fp">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Carros</li>
-                <li>Fale Conosco</li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="list">
-            <div class="item">
-                <div class="car-img">
-                    <img src="1.png" alt="imagem carro">
-                </div>
-                <div class="content">
-                    <p class="car-information">Único Dono</p>
-                    <h2>Ferrari</h2>
-                    <p class="description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consectetur sunt facere ratione, quisquam id rerum veritatis vel porro dolorem nemo fugiat distinctio, est dolores, ducimus blanditiis maxime commodi quis.
-                    </p>
-                    <button>Saiba Mais</button>
-                </div>
+        <div class="interface">
+            <div class="logo">
+                <a href="">
+                    <img src="" alt="">
+                </a>
             </div>
-        </section>
-
-        <div class="arrows">
-            <button><img src="arrow.png" alt="seta"></button>
-            <button><img src="arrow.png" alt="seta"></button>
         </div>
-
-        <div class="indicators">
-            <div class="number">01</div>
-            <ul>
-                <li class="active"></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-    </main>
+    </header>
+    
 </body>
 </html>
