--- a/Portifolio2024/index.html
+++ b/Portifolio2024/index.html
@@ -3,14 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Portifolio Vinicius Correia</title>
 </head>
 <body>
     <header>
         <div class="interface">
             <div class="logo">
-                <a href="">
-                    <img src="" alt="">
+                <a href="#">
+                    <img src="Untitled_logo_2_free-file (1).jpg" alt="">
+                </a>
+            </div>
+
+
+            <nav class="menu-desktop">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Especialidades</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Projetos</a></li>
+                </ul>
+            </nav>
+
+
+
+            <div class="btn-contato">
+                <a href="#">
+                    <button>Contato</button>
                 </a>
             </div>
         </div>
