--- a/Portifolio2024/index.html
+++ b/Portifolio2024/index.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Portifolio Vinicius Correia</title>
+    <title>Portfólio Vinicius Correia</title>
 </head>
 <body>
     <header>
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="Untitled_logo_2_free-file (1).jpg" alt="">
+                    <img src="Untitled_logo_2_free-file (1).jpg" alt="Logo">
                 </a>
             </div>
-
-
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Início</a></li>
                     <li><a href="#">Especialidades</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Projetos</a></li>
                 </ul>
             </nav>
-
-
-
             <div class="btn-contato">
                 <a href="#">
                     <button>Contato</button>
@@ -34,6 +32,26 @@
             </div>
         </div>
     </header>
-    
+
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
+                    </div>
+                    <div class="btn-contato">
+                        <a href="#">
+                            <button>Entre em Contato</button>
+                        </a>
+                    </div>
+                    <div class="img-topo-site">
+                        <img src="IMG_20230318_144607547_HDR.jpg" alt="Imagem de topo">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
